--- a/hi/index.html
+++ b/hi/index.html
@@ -3,14 +3,10 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="./vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>hi</title>
-  <script type="module" crossorigin>(function(){const o=document.createElement("link").relList;if(o&&o.supports&&o.supports("modulepreload"))return;for(const t of document.querySelectorAll('link[rel="modulepreload"]'))s(t);new MutationObserver(t=>{for(const n of t)if(n.type==="childList")for(const c of n.addedNodes)c.tagName==="LINK"&&c.rel==="modulepreload"&&s(c)}).observe(document,{childList:!0,subtree:!0});function i(t){const n={};return t.integrity&&(n.integrity=t.integrity),t.referrerPolicy&&(n.referrerPolicy=t.referrerPolicy),t.crossOrigin==="use-credentials"?n.credentials="include":t.crossOrigin==="anonymous"?n.credentials="omit":n.credentials="same-origin",n}function s(t){if(t.ep)return;t.ep=!0;const n=i(t);fetch(t.href,n)}})();const a=document.querySelector("#hiLink"),f=document.querySelector("#clearLink"),d=document.querySelector("#hiContainer"),p=document.querySelector("#aboutLink"),l=document.querySelector("#about");let r=!0,m=`Spacebar: Toggle Hi
-Hi! button: Toggle Hi
-Clear button: Clear Hi
-? button: Toggle This`;function y(){const e=document.createElement("div"),o=70,i=50;e.textContent="hi",e.style.width=o+"px",e.style.height=i+"px",e.style.display="flex",e.style.alignItems="center",e.style.justifyContent="center",e.style.padding="5px",e.style.border="1px solid #000",e.style.fontSize="2em",e.style.position="fixed",e.style.backgroundColor="white";const s=window.innerWidth-o,t=window.innerHeight-i;return e.style.left=Math.random()*s+"px",e.style.top=Math.random()*t+"px",e}a.addEventListener("click",()=>{r=!r});f.addEventListener("click",()=>{d.innerHTML=""});document.addEventListener("keydown",e=>{e.code==="Space"&&(r=!r)});p.addEventListener("click",()=>{l.innerHTML=l.innerHTML?"":m});function u(){r&&d.appendChild(y()),requestAnimationFrame(u)}requestAnimationFrame(u);</script>
-  <style rel="stylesheet" crossorigin>body{margin:0}.menu{font-size:2em;position:fixed;z-index:9999;top:20px;background-color:#fff}.opa{opacity:.1}.opa:hover{opacity:1}.menu:not(.r){left:20px}.menu.r{right:20px}#about{white-space:pre-line;padding:5px;border:1px solid red}</style>
+  <script type="module" crossorigin>(function(){const o=document.createElement("link").relList;if(o&&o.supports&&o.supports("modulepreload"))return;for(const t of document.querySelectorAll('link[rel="modulepreload"]'))s(t);new MutationObserver(t=>{for(const n of t)if(n.type==="childList")for(const c of n.addedNodes)c.tagName==="LINK"&&c.rel==="modulepreload"&&s(c)}).observe(document,{childList:!0,subtree:!0});function i(t){const n={};return t.integrity&&(n.integrity=t.integrity),t.referrerPolicy&&(n.referrerPolicy=t.referrerPolicy),t.crossOrigin==="use-credentials"?n.credentials="include":t.crossOrigin==="anonymous"?n.credentials="omit":n.credentials="same-origin",n}function s(t){if(t.ep)return;t.ep=!0;const n=i(t);fetch(t.href,n)}})();const a=document.querySelector("#hiLink"),f=document.querySelector("#clearLink"),d=document.querySelector("#hiContainer"),p=document.querySelector("#aboutLink"),l=document.querySelector("#about");let r=!0;function y(){const e=document.createElement("div"),o=70,i=50;e.textContent="hi",e.style.width=o+"px",e.style.height=i+"px",e.style.display="flex",e.style.alignItems="center",e.style.justifyContent="center",e.style.padding="5px",e.style.border="1px solid #000",e.style.fontSize="2em",e.style.position="fixed",e.style.backgroundColor="white";const s=window.innerWidth-o,t=window.innerHeight-i;return e.style.left=Math.random()*s+"px",e.style.top=Math.random()*t+"px",e}a.addEventListener("click",()=>{r=!r});f.addEventListener("click",()=>{d.innerHTML=""});document.addEventListener("keydown",e=>{e.code==="Space"&&(r=!r)});p.addEventListener("click",()=>{l.display=l.display==="block"?"none":"block"});function u(){r&&d.appendChild(y()),requestAnimationFrame(u)}requestAnimationFrame(u);</script>
+  <style rel="stylesheet" crossorigin>body{margin:0}.menu{font-size:2em;position:fixed;z-index:9999;top:20px;background-color:#fff}.opa{opacity:.1}.opa:hover{opacity:1}.menu:not(.r){left:20px}.menu.r{right:20px}#about{white-space:pre-line;padding:5px;display:none;border:1px solid red}</style>
 </head>
 
 <body>
@@ -22,7 +18,10 @@ Clear button: Clear Hi
       <a href="#" id="aboutLink">?</a>
     </div>
     <div id="about" class="menu r">
-
+      Spacebar: Toggle Hi
+      Hi! button: Toggle Hi
+      Clear button: Clear Hi
+      ? button: Toggle This
     </div>
   </div>
 </body>
